@@ -213,6 +213,12 @@ Routing* Firewall::getRouting()
 bool  Firewall::validateChild(FWObject *o)
 { 
     string otype=o->getTypeName();
+    if (Routing::isA(o))
+    {
+        // there can be only one
+        list<FWObject*> routing_objects = getByType(Routing::TYPENAME);
+        if (routing_objects.size() > 0) return false;
+    }
     return (FWObject::validateChild(o) && 
 	    (otype==Interface::TYPENAME  ||
 	     otype==RuleSet::TYPENAME    ||
