@@ -1,3 +1,8 @@
+2008-09-10  Vadim Kurland  <vadim@vk.crocodile.org>
+
+	* Firewall.cpp (Firewall::validateChild): making sure Firewall
+	object has only one Routing child object.
+
 2008-09-06  Vadim Kurland  <vadim@vk.crocodile.org>
 
 	* v3.0.0 released Sep 1, 2008. Merged branch "v3" r180 to trunk
